// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Media Player: Placeholder should render a video placeholder 1`] = `
.emotion-0 {
  position: relative;
  cursor: pointer;
  height: 100%;
}

.no-js .emotion-0 {
  cursor: default;
}

.emotion-0:hover>button,
.emotion-0:focus>button {
  background-color: #B80000;
}

@media screen and (forced-colors: active) {
  .emotion-0:hover>button,
  .emotion-0:focus>button {
    background-color: canvas;
    border: 0.1875rem solid canvasText;
  }

  .emotion-0:hover>button>time,
  .emotion-0:focus>button>time {
    -webkit-text-decoration: underline;
    text-decoration: underline;
  }
}

.emotion-1 {
  font-size: 0.9375rem;
  line-height: 1.125rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-style: normal;
  font-weight: 400;
  width: 100%;
  height: 100%;
  position: absolute;
  border: 0.0625rem solid transparent;
  color: #FFFFFF;
  z-index: 1;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-1 {
    font-size: 0.9375rem;
    line-height: 1.125rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-1 {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

.no-js .emotion-1 {
  background-color: rgba(34, 34, 34, 0.75);
}

@media screen and (forced-colors: active) {
  .no-js .emotion-1 {
    background-color: transparent;
  }
}

.no-js .emotion-1 .guidance-message {
  display: none;
}

.emotion-2 {
  display: block;
  font-weight: normal;
  padding: 0.5rem;
  border-bottom: 0.0625rem solid transparent;
  position: absolute;
  bottom: 0;
}

@media screen and (forced-colors: active) {
  .emotion-2 {
    background-color: window;
  }
}

@media (min-width: 25rem) {
  .emotion-2 {
    padding: 1rem;
  }
}

.emotion-2 strong {
  font-weight: normal;
}

.emotion-3 {
  font-size: 0.75rem;
  line-height: 1rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-style: normal;
  font-weight: 700;
  background-color: #222222;
  border: none;
  color: #FFFFFF;
  cursor: pointer;
  display: block;
  height: 5rem;
  width: 5rem;
  padding: 0;
  -webkit-transition: background-color 300ms;
  transition: background-color 300ms;
  position: absolute;
  bottom: 0;
  left: 0;
  z-index: 1;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-3 {
    font-size: 0.75rem;
    line-height: 1rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-3 {
    font-size: 0.75rem;
    line-height: 1rem;
  }
}

.emotion-3:hover,
.emotion-3:focus {
  background-color: #B80000;
  -webkit-transition: background-color 300ms;
  transition: background-color 300ms;
}

@media screen and (forced-colors: active) {
  .emotion-3 {
    background-color: canvas;
    border: 0.0625rem solid canvasText;
    -webkit-transition: none;
    transition: none;
  }

  .emotion-3:hover,
  .emotion-3:focus {
    background-color: canvas;
    -webkit-transition: none;
    transition: none;
  }

  .emotion-3:focus {
    border: none;
  }
}

.no-js .emotion-3 {
  display: none;
}

.emotion-3:focus-visible::before {
  content: '';
  position: absolute;
  left: 0;
  right: 0;
  top: 0;
  bottom: 0;
  box-shadow: 0 0 0 0.1875rem #FFFFFF inset;
  border: 0.1875rem solid #000000;
}

.emotion-4 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
  white-space: nowrap;
}

.emotion-5 {
  margin-top: 0.5rem;
}

.emotion-5>svg {
  color: #FFFFFF;
  fill: currentColor;
  height: 1.5rem;
  width: 1.5rem;
}

@media screen and (forced-colors: active) {
  .emotion-5>svg {
    color: canvasText;
  }
}

.emotion-6 {
  vertical-align: middle;
  margin: 0 0.25rem;
  color: #222222;
  fill: currentColor;
  width: 0.75rem;
  height: 0.75rem;
}

.emotion-8 {
  display: block;
  margin-top: 0.5rem;
  color: #FFFFFF;
}

@media screen and (forced-colors: active) {
  .emotion-8 {
    color: canvasText;
  }
}

.emotion-9 {
  position: relative;
  height: 100%;
  background-image: url(data:image/svg+xml,%3C%3Fxml%20version%3D%221.0%22%20encoding%3D%22UTF-8%22%3F%3E%3Csvg%20width%3D%22479%22%20height%3D%22136%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%3Cg%20fill%3D%22none%22%20fill-rule%3D%22evenodd%22%3E%3Cg%20fill%3D%22%23D5D0CD%22%3E%3Cg%3E%3Cpath%20d%3D%22M449.556%2091.553l-2.31%201.41c-11.167%206.818-23.313%2010.474-34.346%2010.47-23.61-.09-39.163-14.083-39.227-34.453.03-19.918%2016.27-34.663%2038.633-34.718%2011.387.01%2021.703%202.954%2033.962%209.672l2.251%201.24v-18.19l-.962-.377c-13.824-5.458-24.53-7.89-35.103-7.884-16.346-.006-30.533%205.394-40.637%2014.557-10.105%209.163-16.106%2022.102-16.099%2036.953.008%2010.348%204.279%2022.48%2013.42%2032.105%209.121%209.628%2023.165%2016.648%2042.43%2016.639h.063c15.98%200%2027.062-3.563%2037.074-8.492l.851-.414V91.553zM334%20135.697h144.195V0H334v135.697z%22%2F%3E%3Cpath%20d%3D%22M276.937%2089.968c.041-12.33-8.171-21.696-21.308-25.3%203.544-1.809%206.35-4.023%208.404-6.727%202.75-3.622%204.061-8.064%204.046-13.235.015-6.359-2.486-12.839-7.858-17.687-5.372-4.847-13.526-7.997-24.654-7.991H204.83v97.728h36.073c12.87%200%2021.906-3.482%2027.722-8.65%205.818-5.155%208.32-11.91%208.312-18.138zM167%20135.698h144.197V0H167v135.697z%22%2F%3E%3Cpath%20d%3D%22M109.937%2089.968c.041-12.33-8.171-21.696-21.308-25.3%203.544-1.809%206.35-4.023%208.404-6.727%202.75-3.622%204.061-8.064%204.046-13.235.015-6.359-2.486-12.839-7.858-17.687-5.372-4.847-13.526-7.997-24.654-7.991H37.83v97.728h36.073c12.87%200%2021.906-3.482%2027.722-8.65%205.818-5.155%208.32-11.91%208.312-18.138zM0%20135.698h144.197V0H0v135.697z%22%2F%3E%3Cpath%20d%3D%22M258.662%2088.198c-.013%203.229-1.007%206.475-3.896%209.011-2.884%202.537-7.873%204.463-16.133%204.463H222V75h15.893c7.411%200%2012.67%201.502%2015.965%203.85%203.289%202.362%204.776%205.463%204.804%209.348%22%2F%3E%3Cpath%20d%3D%22M91.662%2088.198c-.013%203.229-1.007%206.475-3.896%209.011-2.884%202.537-7.874%204.463-16.133%204.463H55V75h15.892c7.412%200%2012.672%201.502%2015.966%203.85%203.289%202.362%204.776%205.463%204.804%209.348%22%2F%3E%3Cpath%20d%3D%22M245.186%2055.79c3.096-2.237%204.59-5.386%204.613-10.124-.015-3.25-.943-6.033-3.281-8.111-2.346-2.078-6.33-3.555-12.754-3.555H222v25.275h8.076c6.988.004%2011.998-1.243%2015.11-3.486%22%2F%3E%3Cpath%20d%3D%22M78.186%2055.79c3.096-2.237%204.59-5.386%204.613-10.124-.015-3.25-.943-6.033-3.282-8.111C77.172%2035.477%2073.188%2034%2066.764%2034H55v25.275h8.076c6.988.004%2011.998-1.243%2015.11-3.486%22%2F%3E%3C%2Fg%3E%3C%2Fg%3E%3C%2Fg%3E%3C%2Fsvg%3E%0A);
  -webkit-background-position: center center;
  background-position: center center;
  background-repeat: no-repeat;
  -webkit-background-size: 60px 17px;
  background-size: 60px 17px;
  background-color: #F2F2F2;
}

@media (min-width: 25rem) {
  .emotion-9 {
    -webkit-background-size: 77px 22px;
    background-size: 77px 22px;
  }
}

@media (min-width: 63rem) {
  .emotion-9 {
    -webkit-background-size: 93px 27px;
    background-size: 93px 27px;
  }
}

.emotion-10 {
  width: 100%;
  object-fit: cover;
  height: 100%;
}

<div>
  <div
    class="emotion-0"
    data-e2e="media-loader__placeholder"
  >
    <div
      class="emotion-1"
      data-e2e="media-player__guidance"
    >
      <noscript
        class="emotion-2"
      />
    </div>
    <button
      class="focusIndicatorRemove emotion-3"
      type="button"
    >
      <span
        class="emotion-4"
      >
        Play video, "Dog chases cat.", 2 minutes 30 seconds
      </span>
      <div
        aria-hidden="true"
        class="emotion-5"
      >
        <svg
          aria-hidden="true"
          class="emotion-6 emotion-7"
          focusable="false"
          height="12"
          viewBox="0 0 12 12"
          width="12"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            fill="none"
            fill-rule="evenodd"
          >
            <path
              d="M.5.6h12v12H.5z"
            />
            <path
              d="M2.144.96v11.28l8.712-5.64z"
              fill="currentColor"
            />
          </g>
        </svg>
      </div>
      <time
        aria-hidden="true"
        class="emotion-8"
        datetime="PT2M30S"
      >
        2:30
      </time>
    </button>
    <div
      class="emotion-9"
      style="padding-bottom: 0px; overflow: hidden;"
    >
      <img
        alt=""
        class="emotion-10"
        loading="eager"
        src="http://foo.bar/placeholder.png"
        style="aspect-ratio: auto;"
      />
    </div>
  </div>
</div>
`;

exports[`Media Player: Placeholder should render a video placeholder with guidance 1`] = `
.emotion-0 {
  position: relative;
  cursor: pointer;
  height: 100%;
}

.no-js .emotion-0 {
  cursor: default;
}

.emotion-0:hover>button,
.emotion-0:focus>button {
  background-color: #B80000;
}

@media screen and (forced-colors: active) {
  .emotion-0:hover>button,
  .emotion-0:focus>button {
    background-color: canvas;
    border: 0.1875rem solid canvasText;
  }

  .emotion-0:hover>button>time,
  .emotion-0:focus>button>time {
    -webkit-text-decoration: underline;
    text-decoration: underline;
  }
}

.emotion-1 {
  font-size: 0.9375rem;
  line-height: 1.125rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-style: normal;
  font-weight: 400;
  width: 100%;
  height: 100%;
  position: absolute;
  border: 0.0625rem solid transparent;
  color: #FFFFFF;
  background-color: rgba(34, 34, 34, 0.75);
  z-index: 1;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-1 {
    font-size: 0.9375rem;
    line-height: 1.125rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-1 {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

.no-js .emotion-1 {
  background-color: rgba(34, 34, 34, 0.75);
}

@media screen and (forced-colors: active) {
  .no-js .emotion-1 {
    background-color: transparent;
  }
}

.no-js .emotion-1 .guidance-message {
  display: none;
}

@media screen and (forced-colors: active) {
  .emotion-1 {
    background-color: transparent;
  }
}

.emotion-2 {
  display: block;
  font-weight: normal;
  padding: 0.5rem;
  border-bottom: 0.0625rem solid transparent;
}

@media screen and (forced-colors: active) {
  .emotion-2 {
    background-color: window;
  }
}

@media (min-width: 25rem) {
  .emotion-2 {
    padding: 1rem;
  }
}

.emotion-3 {
  display: block;
  font-weight: normal;
  padding: 0.5rem;
  border-bottom: 0.0625rem solid transparent;
  position: absolute;
  bottom: 0;
}

@media screen and (forced-colors: active) {
  .emotion-3 {
    background-color: window;
  }
}

@media (min-width: 25rem) {
  .emotion-3 {
    padding: 1rem;
  }
}

.emotion-3 strong {
  font-weight: normal;
}

.emotion-4 {
  font-size: 0.75rem;
  line-height: 1rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-style: normal;
  font-weight: 700;
  background-color: #222222;
  border: none;
  color: #FFFFFF;
  cursor: pointer;
  display: block;
  height: 5rem;
  width: 5rem;
  padding: 0;
  -webkit-transition: background-color 300ms;
  transition: background-color 300ms;
  position: absolute;
  bottom: 0;
  left: 0;
  z-index: 1;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-4 {
    font-size: 0.75rem;
    line-height: 1rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-4 {
    font-size: 0.75rem;
    line-height: 1rem;
  }
}

.emotion-4:hover,
.emotion-4:focus {
  background-color: #B80000;
  -webkit-transition: background-color 300ms;
  transition: background-color 300ms;
}

@media screen and (forced-colors: active) {
  .emotion-4 {
    background-color: canvas;
    border: 0.0625rem solid canvasText;
    -webkit-transition: none;
    transition: none;
  }

  .emotion-4:hover,
  .emotion-4:focus {
    background-color: canvas;
    -webkit-transition: none;
    transition: none;
  }

  .emotion-4:focus {
    border: none;
  }
}

.no-js .emotion-4 {
  display: none;
}

.emotion-4:focus-visible::before {
  content: '';
  position: absolute;
  left: 0;
  right: 0;
  top: 0;
  bottom: 0;
  box-shadow: 0 0 0 0.1875rem #FFFFFF inset;
  border: 0.1875rem solid #000000;
}

.emotion-5 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
  white-space: nowrap;
}

.emotion-6 {
  margin-top: 0.5rem;
}

.emotion-6>svg {
  color: #FFFFFF;
  fill: currentColor;
  height: 1.5rem;
  width: 1.5rem;
}

@media screen and (forced-colors: active) {
  .emotion-6>svg {
    color: canvasText;
  }
}

.emotion-7 {
  vertical-align: middle;
  margin: 0 0.25rem;
  color: #222222;
  fill: currentColor;
  width: 0.75rem;
  height: 0.75rem;
}

.emotion-9 {
  display: block;
  margin-top: 0.5rem;
  color: #FFFFFF;
}

@media screen and (forced-colors: active) {
  .emotion-9 {
    color: canvasText;
  }
}

.emotion-10 {
  position: relative;
  height: 100%;
  background-image: url(data:image/svg+xml,%3C%3Fxml%20version%3D%221.0%22%20encoding%3D%22UTF-8%22%3F%3E%3Csvg%20width%3D%22479%22%20height%3D%22136%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%3Cg%20fill%3D%22none%22%20fill-rule%3D%22evenodd%22%3E%3Cg%20fill%3D%22%23D5D0CD%22%3E%3Cg%3E%3Cpath%20d%3D%22M449.556%2091.553l-2.31%201.41c-11.167%206.818-23.313%2010.474-34.346%2010.47-23.61-.09-39.163-14.083-39.227-34.453.03-19.918%2016.27-34.663%2038.633-34.718%2011.387.01%2021.703%202.954%2033.962%209.672l2.251%201.24v-18.19l-.962-.377c-13.824-5.458-24.53-7.89-35.103-7.884-16.346-.006-30.533%205.394-40.637%2014.557-10.105%209.163-16.106%2022.102-16.099%2036.953.008%2010.348%204.279%2022.48%2013.42%2032.105%209.121%209.628%2023.165%2016.648%2042.43%2016.639h.063c15.98%200%2027.062-3.563%2037.074-8.492l.851-.414V91.553zM334%20135.697h144.195V0H334v135.697z%22%2F%3E%3Cpath%20d%3D%22M276.937%2089.968c.041-12.33-8.171-21.696-21.308-25.3%203.544-1.809%206.35-4.023%208.404-6.727%202.75-3.622%204.061-8.064%204.046-13.235.015-6.359-2.486-12.839-7.858-17.687-5.372-4.847-13.526-7.997-24.654-7.991H204.83v97.728h36.073c12.87%200%2021.906-3.482%2027.722-8.65%205.818-5.155%208.32-11.91%208.312-18.138zM167%20135.698h144.197V0H167v135.697z%22%2F%3E%3Cpath%20d%3D%22M109.937%2089.968c.041-12.33-8.171-21.696-21.308-25.3%203.544-1.809%206.35-4.023%208.404-6.727%202.75-3.622%204.061-8.064%204.046-13.235.015-6.359-2.486-12.839-7.858-17.687-5.372-4.847-13.526-7.997-24.654-7.991H37.83v97.728h36.073c12.87%200%2021.906-3.482%2027.722-8.65%205.818-5.155%208.32-11.91%208.312-18.138zM0%20135.698h144.197V0H0v135.697z%22%2F%3E%3Cpath%20d%3D%22M258.662%2088.198c-.013%203.229-1.007%206.475-3.896%209.011-2.884%202.537-7.873%204.463-16.133%204.463H222V75h15.893c7.411%200%2012.67%201.502%2015.965%203.85%203.289%202.362%204.776%205.463%204.804%209.348%22%2F%3E%3Cpath%20d%3D%22M91.662%2088.198c-.013%203.229-1.007%206.475-3.896%209.011-2.884%202.537-7.874%204.463-16.133%204.463H55V75h15.892c7.412%200%2012.672%201.502%2015.966%203.85%203.289%202.362%204.776%205.463%204.804%209.348%22%2F%3E%3Cpath%20d%3D%22M245.186%2055.79c3.096-2.237%204.59-5.386%204.613-10.124-.015-3.25-.943-6.033-3.281-8.111-2.346-2.078-6.33-3.555-12.754-3.555H222v25.275h8.076c6.988.004%2011.998-1.243%2015.11-3.486%22%2F%3E%3Cpath%20d%3D%22M78.186%2055.79c3.096-2.237%204.59-5.386%204.613-10.124-.015-3.25-.943-6.033-3.282-8.111C77.172%2035.477%2073.188%2034%2066.764%2034H55v25.275h8.076c6.988.004%2011.998-1.243%2015.11-3.486%22%2F%3E%3C%2Fg%3E%3C%2Fg%3E%3C%2Fg%3E%3C%2Fsvg%3E%0A);
  -webkit-background-position: center center;
  background-position: center center;
  background-repeat: no-repeat;
  -webkit-background-size: 60px 17px;
  background-size: 60px 17px;
  background-color: #F2F2F2;
}

@media (min-width: 25rem) {
  .emotion-10 {
    -webkit-background-size: 77px 22px;
    background-size: 77px 22px;
  }
}

@media (min-width: 63rem) {
  .emotion-10 {
    -webkit-background-size: 93px 27px;
    background-size: 93px 27px;
  }
}

.emotion-11 {
  width: 100%;
  object-fit: cover;
  height: 100%;
}

<div>
  <div
    class="emotion-0"
    data-e2e="media-loader__placeholder"
  >
    <div
      class="emotion-1"
      data-e2e="media-player__guidance"
    >
      <strong
        aria-hidden="true"
        class="guidance-message emotion-2"
      >
        Guidance: May contain strong language, sexual or violent content that may offend.
      </strong>
      <noscript
        class="emotion-3"
      />
    </div>
    <button
      class="focusIndicatorRemove emotion-4"
      type="button"
    >
      <span
        class="emotion-5"
      >
        Guidance: May contain strong language, sexual or violent content that may offend. Play video, "Dog chases cat.", 2 minutes 30 seconds
      </span>
      <div
        aria-hidden="true"
        class="emotion-6"
      >
        <svg
          aria-hidden="true"
          class="emotion-7 emotion-8"
          focusable="false"
          height="12"
          viewBox="0 0 12 12"
          width="12"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            fill="none"
            fill-rule="evenodd"
          >
            <path
              d="M.5.6h12v12H.5z"
            />
            <path
              d="M2.144.96v11.28l8.712-5.64z"
              fill="currentColor"
            />
          </g>
        </svg>
      </div>
      <time
        aria-hidden="true"
        class="emotion-9"
        datetime="PT2M30S"
      >
        2:30
      </time>
    </button>
    <div
      class="emotion-10"
      style="padding-bottom: 0px; overflow: hidden;"
    >
      <img
        alt=""
        class="emotion-11"
        loading="eager"
        src="http://foo.bar/placeholder.png"
        style="aspect-ratio: auto;"
      />
    </div>
  </div>
</div>
`;

exports[`Media Player: Placeholder should render a video placeholder without duration 1`] = `
.emotion-0 {
  position: relative;
  cursor: pointer;
  height: 100%;
}

.no-js .emotion-0 {
  cursor: default;
}

.emotion-0:hover>button,
.emotion-0:focus>button {
  background-color: #B80000;
}

@media screen and (forced-colors: active) {
  .emotion-0:hover>button,
  .emotion-0:focus>button {
    background-color: canvas;
    border: 0.1875rem solid canvasText;
  }

  .emotion-0:hover>button>time,
  .emotion-0:focus>button>time {
    -webkit-text-decoration: underline;
    text-decoration: underline;
  }
}

.emotion-1 {
  font-size: 0.9375rem;
  line-height: 1.125rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-style: normal;
  font-weight: 400;
  width: 100%;
  height: 100%;
  position: absolute;
  border: 0.0625rem solid transparent;
  color: #FFFFFF;
  z-index: 1;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-1 {
    font-size: 0.9375rem;
    line-height: 1.125rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-1 {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

.no-js .emotion-1 {
  background-color: rgba(34, 34, 34, 0.75);
}

@media screen and (forced-colors: active) {
  .no-js .emotion-1 {
    background-color: transparent;
  }
}

.no-js .emotion-1 .guidance-message {
  display: none;
}

.emotion-2 {
  display: block;
  font-weight: normal;
  padding: 0.5rem;
  border-bottom: 0.0625rem solid transparent;
  position: absolute;
  bottom: 0;
}

@media screen and (forced-colors: active) {
  .emotion-2 {
    background-color: window;
  }
}

@media (min-width: 25rem) {
  .emotion-2 {
    padding: 1rem;
  }
}

.emotion-2 strong {
  font-weight: normal;
}

.emotion-3 {
  font-size: 0.75rem;
  line-height: 1rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-style: normal;
  font-weight: 700;
  background-color: #222222;
  border: none;
  color: #FFFFFF;
  cursor: pointer;
  display: block;
  height: 5rem;
  width: 5rem;
  padding: 0;
  -webkit-transition: background-color 300ms;
  transition: background-color 300ms;
  position: absolute;
  bottom: 0;
  left: 0;
  z-index: 1;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-3 {
    font-size: 0.75rem;
    line-height: 1rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-3 {
    font-size: 0.75rem;
    line-height: 1rem;
  }
}

.emotion-3:hover,
.emotion-3:focus {
  background-color: #B80000;
  -webkit-transition: background-color 300ms;
  transition: background-color 300ms;
}

@media screen and (forced-colors: active) {
  .emotion-3 {
    background-color: canvas;
    border: 0.0625rem solid canvasText;
    -webkit-transition: none;
    transition: none;
  }

  .emotion-3:hover,
  .emotion-3:focus {
    background-color: canvas;
    -webkit-transition: none;
    transition: none;
  }

  .emotion-3:focus {
    border: none;
  }
}

.no-js .emotion-3 {
  display: none;
}

.emotion-3:focus-visible::before {
  content: '';
  position: absolute;
  left: 0;
  right: 0;
  top: 0;
  bottom: 0;
  box-shadow: 0 0 0 0.1875rem #FFFFFF inset;
  border: 0.1875rem solid #000000;
}

.emotion-4 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
  white-space: nowrap;
}

.emotion-5>svg {
  color: #FFFFFF;
  fill: currentColor;
  height: 1.5rem;
  width: 1.5rem;
}

@media screen and (forced-colors: active) {
  .emotion-5>svg {
    color: canvasText;
  }
}

.emotion-6 {
  vertical-align: middle;
  margin: 0 0.25rem;
  color: #222222;
  fill: currentColor;
  width: 0.75rem;
  height: 0.75rem;
}

.emotion-8 {
  position: relative;
  height: 100%;
  background-image: url(data:image/svg+xml,%3C%3Fxml%20version%3D%221.0%22%20encoding%3D%22UTF-8%22%3F%3E%3Csvg%20width%3D%22479%22%20height%3D%22136%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%3Cg%20fill%3D%22none%22%20fill-rule%3D%22evenodd%22%3E%3Cg%20fill%3D%22%23D5D0CD%22%3E%3Cg%3E%3Cpath%20d%3D%22M449.556%2091.553l-2.31%201.41c-11.167%206.818-23.313%2010.474-34.346%2010.47-23.61-.09-39.163-14.083-39.227-34.453.03-19.918%2016.27-34.663%2038.633-34.718%2011.387.01%2021.703%202.954%2033.962%209.672l2.251%201.24v-18.19l-.962-.377c-13.824-5.458-24.53-7.89-35.103-7.884-16.346-.006-30.533%205.394-40.637%2014.557-10.105%209.163-16.106%2022.102-16.099%2036.953.008%2010.348%204.279%2022.48%2013.42%2032.105%209.121%209.628%2023.165%2016.648%2042.43%2016.639h.063c15.98%200%2027.062-3.563%2037.074-8.492l.851-.414V91.553zM334%20135.697h144.195V0H334v135.697z%22%2F%3E%3Cpath%20d%3D%22M276.937%2089.968c.041-12.33-8.171-21.696-21.308-25.3%203.544-1.809%206.35-4.023%208.404-6.727%202.75-3.622%204.061-8.064%204.046-13.235.015-6.359-2.486-12.839-7.858-17.687-5.372-4.847-13.526-7.997-24.654-7.991H204.83v97.728h36.073c12.87%200%2021.906-3.482%2027.722-8.65%205.818-5.155%208.32-11.91%208.312-18.138zM167%20135.698h144.197V0H167v135.697z%22%2F%3E%3Cpath%20d%3D%22M109.937%2089.968c.041-12.33-8.171-21.696-21.308-25.3%203.544-1.809%206.35-4.023%208.404-6.727%202.75-3.622%204.061-8.064%204.046-13.235.015-6.359-2.486-12.839-7.858-17.687-5.372-4.847-13.526-7.997-24.654-7.991H37.83v97.728h36.073c12.87%200%2021.906-3.482%2027.722-8.65%205.818-5.155%208.32-11.91%208.312-18.138zM0%20135.698h144.197V0H0v135.697z%22%2F%3E%3Cpath%20d%3D%22M258.662%2088.198c-.013%203.229-1.007%206.475-3.896%209.011-2.884%202.537-7.873%204.463-16.133%204.463H222V75h15.893c7.411%200%2012.67%201.502%2015.965%203.85%203.289%202.362%204.776%205.463%204.804%209.348%22%2F%3E%3Cpath%20d%3D%22M91.662%2088.198c-.013%203.229-1.007%206.475-3.896%209.011-2.884%202.537-7.874%204.463-16.133%204.463H55V75h15.892c7.412%200%2012.672%201.502%2015.966%203.85%203.289%202.362%204.776%205.463%204.804%209.348%22%2F%3E%3Cpath%20d%3D%22M245.186%2055.79c3.096-2.237%204.59-5.386%204.613-10.124-.015-3.25-.943-6.033-3.281-8.111-2.346-2.078-6.33-3.555-12.754-3.555H222v25.275h8.076c6.988.004%2011.998-1.243%2015.11-3.486%22%2F%3E%3Cpath%20d%3D%22M78.186%2055.79c3.096-2.237%204.59-5.386%204.613-10.124-.015-3.25-.943-6.033-3.282-8.111C77.172%2035.477%2073.188%2034%2066.764%2034H55v25.275h8.076c6.988.004%2011.998-1.243%2015.11-3.486%22%2F%3E%3C%2Fg%3E%3C%2Fg%3E%3C%2Fg%3E%3C%2Fsvg%3E%0A);
  -webkit-background-position: center center;
  background-position: center center;
  background-repeat: no-repeat;
  -webkit-background-size: 60px 17px;
  background-size: 60px 17px;
  background-color: #F2F2F2;
}

@media (min-width: 25rem) {
  .emotion-8 {
    -webkit-background-size: 77px 22px;
    background-size: 77px 22px;
  }
}

@media (min-width: 63rem) {
  .emotion-8 {
    -webkit-background-size: 93px 27px;
    background-size: 93px 27px;
  }
}

.emotion-9 {
  width: 100%;
  object-fit: cover;
  height: 100%;
}

<div>
  <div
    class="emotion-0"
    data-e2e="media-loader__placeholder"
  >
    <div
      class="emotion-1"
      data-e2e="media-player__guidance"
    >
      <noscript
        class="emotion-2"
      />
    </div>
    <button
      class="focusIndicatorRemove emotion-3"
      type="button"
    >
      <span
        class="emotion-4"
      >
        Play video, "Dog chases cat."
      </span>
      <div
        aria-hidden="true"
        class="emotion-5"
      >
        <svg
          aria-hidden="true"
          class="emotion-6 emotion-7"
          focusable="false"
          height="12"
          viewBox="0 0 12 12"
          width="12"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            fill="none"
            fill-rule="evenodd"
          >
            <path
              d="M.5.6h12v12H.5z"
            />
            <path
              d="M2.144.96v11.28l8.712-5.64z"
              fill="currentColor"
            />
          </g>
        </svg>
      </div>
    </button>
    <div
      class="emotion-8"
      style="padding-bottom: 0px; overflow: hidden;"
    >
      <img
        alt=""
        class="emotion-9"
        loading="eager"
        src="http://foo.bar/placeholder.png"
        style="aspect-ratio: auto;"
      />
    </div>
  </div>
</div>
`;

exports[`Media Player: Placeholder should render an audio placeholder 1`] = `
.emotion-0 {
  position: relative;
  cursor: pointer;
  height: 100%;
}

.no-js .emotion-0 {
  cursor: default;
}

.emotion-0:hover>button,
.emotion-0:focus>button {
  background-color: #B80000;
}

@media screen and (forced-colors: active) {
  .emotion-0:hover>button,
  .emotion-0:focus>button {
    background-color: canvas;
    border: 0.1875rem solid canvasText;
  }

  .emotion-0:hover>button>time,
  .emotion-0:focus>button>time {
    -webkit-text-decoration: underline;
    text-decoration: underline;
  }
}

.emotion-1 {
  font-size: 0.9375rem;
  line-height: 1.125rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-style: normal;
  font-weight: 400;
  width: 100%;
  height: 100%;
  position: absolute;
  border: 0.0625rem solid transparent;
  color: #FFFFFF;
  z-index: 1;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-1 {
    font-size: 0.9375rem;
    line-height: 1.125rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-1 {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

.no-js .emotion-1 {
  background-color: rgba(34, 34, 34, 0.75);
}

@media screen and (forced-colors: active) {
  .no-js .emotion-1 {
    background-color: transparent;
  }
}

.no-js .emotion-1 .guidance-message {
  display: none;
}

.emotion-2 {
  display: block;
  font-weight: normal;
  padding: 0.5rem;
  border-bottom: 0.0625rem solid transparent;
  position: absolute;
  bottom: 0;
}

@media screen and (forced-colors: active) {
  .emotion-2 {
    background-color: window;
  }
}

@media (min-width: 25rem) {
  .emotion-2 {
    padding: 1rem;
  }
}

.emotion-2 strong {
  font-weight: normal;
}

.emotion-3 {
  font-size: 0.75rem;
  line-height: 1rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-style: normal;
  font-weight: 700;
  background-color: #222222;
  border: none;
  color: #FFFFFF;
  cursor: pointer;
  display: block;
  height: 5rem;
  width: 5rem;
  padding: 0;
  -webkit-transition: background-color 300ms;
  transition: background-color 300ms;
  position: absolute;
  bottom: 0;
  left: 0;
  z-index: 1;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-3 {
    font-size: 0.75rem;
    line-height: 1rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-3 {
    font-size: 0.75rem;
    line-height: 1rem;
  }
}

.emotion-3:hover,
.emotion-3:focus {
  background-color: #B80000;
  -webkit-transition: background-color 300ms;
  transition: background-color 300ms;
}

@media screen and (forced-colors: active) {
  .emotion-3 {
    background-color: canvas;
    border: 0.0625rem solid canvasText;
    -webkit-transition: none;
    transition: none;
  }

  .emotion-3:hover,
  .emotion-3:focus {
    background-color: canvas;
    -webkit-transition: none;
    transition: none;
  }

  .emotion-3:focus {
    border: none;
  }
}

.no-js .emotion-3 {
  display: none;
}

.emotion-3:focus-visible::before {
  content: '';
  position: absolute;
  left: 0;
  right: 0;
  top: 0;
  bottom: 0;
  box-shadow: 0 0 0 0.1875rem #FFFFFF inset;
  border: 0.1875rem solid #000000;
}

.emotion-4 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
  white-space: nowrap;
}

.emotion-5 {
  margin-top: 0.5rem;
}

.emotion-5>svg {
  color: #FFFFFF;
  fill: currentColor;
  height: 1.5rem;
  width: 1.5rem;
}

@media screen and (forced-colors: active) {
  .emotion-5>svg {
    color: canvasText;
  }
}

.emotion-6 {
  vertical-align: middle;
  margin: 0 0.25rem;
  color: #222222;
  fill: currentColor;
  width: 0.75rem;
  height: 0.75rem;
}

.emotion-8 {
  display: block;
  margin-top: 0.5rem;
  color: #FFFFFF;
}

@media screen and (forced-colors: active) {
  .emotion-8 {
    color: canvasText;
  }
}

.emotion-9 {
  position: relative;
  height: 100%;
  background-image: url(data:image/svg+xml,%3C%3Fxml%20version%3D%221.0%22%20encoding%3D%22UTF-8%22%3F%3E%3Csvg%20width%3D%22479%22%20height%3D%22136%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%3Cg%20fill%3D%22none%22%20fill-rule%3D%22evenodd%22%3E%3Cg%20fill%3D%22%23D5D0CD%22%3E%3Cg%3E%3Cpath%20d%3D%22M449.556%2091.553l-2.31%201.41c-11.167%206.818-23.313%2010.474-34.346%2010.47-23.61-.09-39.163-14.083-39.227-34.453.03-19.918%2016.27-34.663%2038.633-34.718%2011.387.01%2021.703%202.954%2033.962%209.672l2.251%201.24v-18.19l-.962-.377c-13.824-5.458-24.53-7.89-35.103-7.884-16.346-.006-30.533%205.394-40.637%2014.557-10.105%209.163-16.106%2022.102-16.099%2036.953.008%2010.348%204.279%2022.48%2013.42%2032.105%209.121%209.628%2023.165%2016.648%2042.43%2016.639h.063c15.98%200%2027.062-3.563%2037.074-8.492l.851-.414V91.553zM334%20135.697h144.195V0H334v135.697z%22%2F%3E%3Cpath%20d%3D%22M276.937%2089.968c.041-12.33-8.171-21.696-21.308-25.3%203.544-1.809%206.35-4.023%208.404-6.727%202.75-3.622%204.061-8.064%204.046-13.235.015-6.359-2.486-12.839-7.858-17.687-5.372-4.847-13.526-7.997-24.654-7.991H204.83v97.728h36.073c12.87%200%2021.906-3.482%2027.722-8.65%205.818-5.155%208.32-11.91%208.312-18.138zM167%20135.698h144.197V0H167v135.697z%22%2F%3E%3Cpath%20d%3D%22M109.937%2089.968c.041-12.33-8.171-21.696-21.308-25.3%203.544-1.809%206.35-4.023%208.404-6.727%202.75-3.622%204.061-8.064%204.046-13.235.015-6.359-2.486-12.839-7.858-17.687-5.372-4.847-13.526-7.997-24.654-7.991H37.83v97.728h36.073c12.87%200%2021.906-3.482%2027.722-8.65%205.818-5.155%208.32-11.91%208.312-18.138zM0%20135.698h144.197V0H0v135.697z%22%2F%3E%3Cpath%20d%3D%22M258.662%2088.198c-.013%203.229-1.007%206.475-3.896%209.011-2.884%202.537-7.873%204.463-16.133%204.463H222V75h15.893c7.411%200%2012.67%201.502%2015.965%203.85%203.289%202.362%204.776%205.463%204.804%209.348%22%2F%3E%3Cpath%20d%3D%22M91.662%2088.198c-.013%203.229-1.007%206.475-3.896%209.011-2.884%202.537-7.874%204.463-16.133%204.463H55V75h15.892c7.412%200%2012.672%201.502%2015.966%203.85%203.289%202.362%204.776%205.463%204.804%209.348%22%2F%3E%3Cpath%20d%3D%22M245.186%2055.79c3.096-2.237%204.59-5.386%204.613-10.124-.015-3.25-.943-6.033-3.281-8.111-2.346-2.078-6.33-3.555-12.754-3.555H222v25.275h8.076c6.988.004%2011.998-1.243%2015.11-3.486%22%2F%3E%3Cpath%20d%3D%22M78.186%2055.79c3.096-2.237%204.59-5.386%204.613-10.124-.015-3.25-.943-6.033-3.282-8.111C77.172%2035.477%2073.188%2034%2066.764%2034H55v25.275h8.076c6.988.004%2011.998-1.243%2015.11-3.486%22%2F%3E%3C%2Fg%3E%3C%2Fg%3E%3C%2Fg%3E%3C%2Fsvg%3E%0A);
  -webkit-background-position: center center;
  background-position: center center;
  background-repeat: no-repeat;
  -webkit-background-size: 60px 17px;
  background-size: 60px 17px;
  background-color: #F2F2F2;
}

@media (min-width: 25rem) {
  .emotion-9 {
    -webkit-background-size: 77px 22px;
    background-size: 77px 22px;
  }
}

@media (min-width: 63rem) {
  .emotion-9 {
    -webkit-background-size: 93px 27px;
    background-size: 93px 27px;
  }
}

.emotion-10 {
  width: 100%;
  object-fit: cover;
  height: 100%;
}

<div>
  <div
    class="emotion-0"
    data-e2e="media-loader__placeholder"
  >
    <div
      class="emotion-1"
      data-e2e="media-player__guidance"
    >
      <noscript
        class="emotion-2"
      />
    </div>
    <button
      class="focusIndicatorRemove emotion-3"
      type="button"
    >
      <span
        class="emotion-4"
      >
        Play audio, "Dog barks at cat.", 2 minutes 30 seconds
      </span>
      <div
        aria-hidden="true"
        class="emotion-5"
      >
        <svg
          aria-hidden="true"
          class="emotion-6 emotion-7"
          focusable="false"
          height="12px"
          viewBox="0 0 13 12"
          width="13px"
        >
          <path
            d="M9.021 1.811l-.525.525c.938.938 1.5 2.25 1.5 3.675s-.563 2.738-1.5 3.675l.525.525c1.05-1.087 1.725-2.55 1.725-4.2s-.675-3.112-1.725-4.2z"
          />
          <path
            d="M10.596.199l-.525.562c1.35 1.35 2.175 3.225 2.175 5.25s-.825 3.9-2.175 5.25l.525.525c1.5-1.462 2.4-3.525 2.4-5.775s-.9-4.312-2.4-5.812zM6.996 1.511l-2.25 2.25H.996v4.5h3.75l2.25 2.25z"
          />
        </svg>
      </div>
      <time
        aria-hidden="true"
        class="emotion-8"
        datetime="PT2M30S"
      >
        2:30
      </time>
    </button>
    <div
      class="emotion-9"
      style="padding-bottom: 0px; overflow: hidden;"
    >
      <img
        alt=""
        class="emotion-10"
        loading="eager"
        src="http://foo.bar/placeholder.png"
        style="aspect-ratio: auto;"
      />
    </div>
  </div>
</div>
`;

exports[`Media Player: Placeholder should render an audio placeholder without duration 1`] = `
.emotion-0 {
  position: relative;
  cursor: pointer;
  height: 100%;
}

.no-js .emotion-0 {
  cursor: default;
}

.emotion-0:hover>button,
.emotion-0:focus>button {
  background-color: #B80000;
}

@media screen and (forced-colors: active) {
  .emotion-0:hover>button,
  .emotion-0:focus>button {
    background-color: canvas;
    border: 0.1875rem solid canvasText;
  }

  .emotion-0:hover>button>time,
  .emotion-0:focus>button>time {
    -webkit-text-decoration: underline;
    text-decoration: underline;
  }
}

.emotion-1 {
  font-size: 0.9375rem;
  line-height: 1.125rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-style: normal;
  font-weight: 400;
  width: 100%;
  height: 100%;
  position: absolute;
  border: 0.0625rem solid transparent;
  color: #FFFFFF;
  z-index: 1;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-1 {
    font-size: 0.9375rem;
    line-height: 1.125rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-1 {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

.no-js .emotion-1 {
  background-color: rgba(34, 34, 34, 0.75);
}

@media screen and (forced-colors: active) {
  .no-js .emotion-1 {
    background-color: transparent;
  }
}

.no-js .emotion-1 .guidance-message {
  display: none;
}

.emotion-2 {
  display: block;
  font-weight: normal;
  padding: 0.5rem;
  border-bottom: 0.0625rem solid transparent;
  position: absolute;
  bottom: 0;
}

@media screen and (forced-colors: active) {
  .emotion-2 {
    background-color: window;
  }
}

@media (min-width: 25rem) {
  .emotion-2 {
    padding: 1rem;
  }
}

.emotion-2 strong {
  font-weight: normal;
}

.emotion-3 {
  font-size: 0.75rem;
  line-height: 1rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-style: normal;
  font-weight: 700;
  background-color: #222222;
  border: none;
  color: #FFFFFF;
  cursor: pointer;
  display: block;
  height: 5rem;
  width: 5rem;
  padding: 0;
  -webkit-transition: background-color 300ms;
  transition: background-color 300ms;
  position: absolute;
  bottom: 0;
  left: 0;
  z-index: 1;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-3 {
    font-size: 0.75rem;
    line-height: 1rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-3 {
    font-size: 0.75rem;
    line-height: 1rem;
  }
}

.emotion-3:hover,
.emotion-3:focus {
  background-color: #B80000;
  -webkit-transition: background-color 300ms;
  transition: background-color 300ms;
}

@media screen and (forced-colors: active) {
  .emotion-3 {
    background-color: canvas;
    border: 0.0625rem solid canvasText;
    -webkit-transition: none;
    transition: none;
  }

  .emotion-3:hover,
  .emotion-3:focus {
    background-color: canvas;
    -webkit-transition: none;
    transition: none;
  }

  .emotion-3:focus {
    border: none;
  }
}

.no-js .emotion-3 {
  display: none;
}

.emotion-3:focus-visible::before {
  content: '';
  position: absolute;
  left: 0;
  right: 0;
  top: 0;
  bottom: 0;
  box-shadow: 0 0 0 0.1875rem #FFFFFF inset;
  border: 0.1875rem solid #000000;
}

.emotion-4 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
  white-space: nowrap;
}

.emotion-5>svg {
  color: #FFFFFF;
  fill: currentColor;
  height: 1.5rem;
  width: 1.5rem;
}

@media screen and (forced-colors: active) {
  .emotion-5>svg {
    color: canvasText;
  }
}

.emotion-6 {
  vertical-align: middle;
  margin: 0 0.25rem;
  color: #222222;
  fill: currentColor;
  width: 0.75rem;
  height: 0.75rem;
}

.emotion-8 {
  position: relative;
  height: 100%;
  background-image: url(data:image/svg+xml,%3C%3Fxml%20version%3D%221.0%22%20encoding%3D%22UTF-8%22%3F%3E%3Csvg%20width%3D%22479%22%20height%3D%22136%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%3Cg%20fill%3D%22none%22%20fill-rule%3D%22evenodd%22%3E%3Cg%20fill%3D%22%23D5D0CD%22%3E%3Cg%3E%3Cpath%20d%3D%22M449.556%2091.553l-2.31%201.41c-11.167%206.818-23.313%2010.474-34.346%2010.47-23.61-.09-39.163-14.083-39.227-34.453.03-19.918%2016.27-34.663%2038.633-34.718%2011.387.01%2021.703%202.954%2033.962%209.672l2.251%201.24v-18.19l-.962-.377c-13.824-5.458-24.53-7.89-35.103-7.884-16.346-.006-30.533%205.394-40.637%2014.557-10.105%209.163-16.106%2022.102-16.099%2036.953.008%2010.348%204.279%2022.48%2013.42%2032.105%209.121%209.628%2023.165%2016.648%2042.43%2016.639h.063c15.98%200%2027.062-3.563%2037.074-8.492l.851-.414V91.553zM334%20135.697h144.195V0H334v135.697z%22%2F%3E%3Cpath%20d%3D%22M276.937%2089.968c.041-12.33-8.171-21.696-21.308-25.3%203.544-1.809%206.35-4.023%208.404-6.727%202.75-3.622%204.061-8.064%204.046-13.235.015-6.359-2.486-12.839-7.858-17.687-5.372-4.847-13.526-7.997-24.654-7.991H204.83v97.728h36.073c12.87%200%2021.906-3.482%2027.722-8.65%205.818-5.155%208.32-11.91%208.312-18.138zM167%20135.698h144.197V0H167v135.697z%22%2F%3E%3Cpath%20d%3D%22M109.937%2089.968c.041-12.33-8.171-21.696-21.308-25.3%203.544-1.809%206.35-4.023%208.404-6.727%202.75-3.622%204.061-8.064%204.046-13.235.015-6.359-2.486-12.839-7.858-17.687-5.372-4.847-13.526-7.997-24.654-7.991H37.83v97.728h36.073c12.87%200%2021.906-3.482%2027.722-8.65%205.818-5.155%208.32-11.91%208.312-18.138zM0%20135.698h144.197V0H0v135.697z%22%2F%3E%3Cpath%20d%3D%22M258.662%2088.198c-.013%203.229-1.007%206.475-3.896%209.011-2.884%202.537-7.873%204.463-16.133%204.463H222V75h15.893c7.411%200%2012.67%201.502%2015.965%203.85%203.289%202.362%204.776%205.463%204.804%209.348%22%2F%3E%3Cpath%20d%3D%22M91.662%2088.198c-.013%203.229-1.007%206.475-3.896%209.011-2.884%202.537-7.874%204.463-16.133%204.463H55V75h15.892c7.412%200%2012.672%201.502%2015.966%203.85%203.289%202.362%204.776%205.463%204.804%209.348%22%2F%3E%3Cpath%20d%3D%22M245.186%2055.79c3.096-2.237%204.59-5.386%204.613-10.124-.015-3.25-.943-6.033-3.281-8.111-2.346-2.078-6.33-3.555-12.754-3.555H222v25.275h8.076c6.988.004%2011.998-1.243%2015.11-3.486%22%2F%3E%3Cpath%20d%3D%22M78.186%2055.79c3.096-2.237%204.59-5.386%204.613-10.124-.015-3.25-.943-6.033-3.282-8.111C77.172%2035.477%2073.188%2034%2066.764%2034H55v25.275h8.076c6.988.004%2011.998-1.243%2015.11-3.486%22%2F%3E%3C%2Fg%3E%3C%2Fg%3E%3C%2Fg%3E%3C%2Fsvg%3E%0A);
  -webkit-background-position: center center;
  background-position: center center;
  background-repeat: no-repeat;
  -webkit-background-size: 60px 17px;
  background-size: 60px 17px;
  background-color: #F2F2F2;
}

@media (min-width: 25rem) {
  .emotion-8 {
    -webkit-background-size: 77px 22px;
    background-size: 77px 22px;
  }
}

@media (min-width: 63rem) {
  .emotion-8 {
    -webkit-background-size: 93px 27px;
    background-size: 93px 27px;
  }
}

.emotion-9 {
  width: 100%;
  object-fit: cover;
  height: 100%;
}

<div>
  <div
    class="emotion-0"
    data-e2e="media-loader__placeholder"
  >
    <div
      class="emotion-1"
      data-e2e="media-player__guidance"
    >
      <noscript
        class="emotion-2"
      />
    </div>
    <button
      class="focusIndicatorRemove emotion-3"
      type="button"
    >
      <span
        class="emotion-4"
      >
        Play audio, "Dog barks at cat."
      </span>
      <div
        aria-hidden="true"
        class="emotion-5"
      >
        <svg
          aria-hidden="true"
          class="emotion-6 emotion-7"
          focusable="false"
          height="12px"
          viewBox="0 0 13 12"
          width="13px"
        >
          <path
            d="M9.021 1.811l-.525.525c.938.938 1.5 2.25 1.5 3.675s-.563 2.738-1.5 3.675l.525.525c1.05-1.087 1.725-2.55 1.725-4.2s-.675-3.112-1.725-4.2z"
          />
          <path
            d="M10.596.199l-.525.562c1.35 1.35 2.175 3.225 2.175 5.25s-.825 3.9-2.175 5.25l.525.525c1.5-1.462 2.4-3.525 2.4-5.775s-.9-4.312-2.4-5.812zM6.996 1.511l-2.25 2.25H.996v4.5h3.75l2.25 2.25z"
          />
        </svg>
      </div>
    </button>
    <div
      class="emotion-8"
      style="padding-bottom: 0px; overflow: hidden;"
    >
      <img
        alt=""
        class="emotion-9"
        loading="eager"
        src="http://foo.bar/placeholder.png"
        style="aspect-ratio: auto;"
      />
    </div>
  </div>
</div>
`;

exports[`Media Player: Placeholder should render no-js styles when noJsClassName prop is used 1`] = `
.emotion-0 {
  position: relative;
  cursor: pointer;
  height: 100%;
}

.no-js .emotion-0 {
  cursor: default;
}

.emotion-0:hover>button,
.emotion-0:focus>button {
  background-color: #B80000;
}

@media screen and (forced-colors: active) {
  .emotion-0:hover>button,
  .emotion-0:focus>button {
    background-color: canvas;
    border: 0.1875rem solid canvasText;
  }

  .emotion-0:hover>button>time,
  .emotion-0:focus>button>time {
    -webkit-text-decoration: underline;
    text-decoration: underline;
  }
}

.emotion-1 {
  font-size: 0.9375rem;
  line-height: 1.125rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-style: normal;
  font-weight: 400;
  width: 100%;
  height: 100%;
  position: absolute;
  border: 0.0625rem solid transparent;
  color: #FFFFFF;
  background-color: rgba(34, 34, 34, 0.75);
  z-index: 1;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-1 {
    font-size: 0.9375rem;
    line-height: 1.125rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-1 {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

.no-js .emotion-1 {
  background-color: rgba(34, 34, 34, 0.75);
}

@media screen and (forced-colors: active) {
  .no-js .emotion-1 {
    background-color: transparent;
  }
}

.no-js .emotion-1 .guidance-message {
  display: none;
}

@media screen and (forced-colors: active) {
  .emotion-1 {
    background-color: transparent;
  }
}

.emotion-2 {
  display: block;
  font-weight: normal;
  padding: 0.5rem;
  border-bottom: 0.0625rem solid transparent;
}

@media screen and (forced-colors: active) {
  .emotion-2 {
    background-color: window;
  }
}

@media (min-width: 25rem) {
  .emotion-2 {
    padding: 1rem;
  }
}

.emotion-3 {
  display: block;
  font-weight: normal;
  padding: 0.5rem;
  border-bottom: 0.0625rem solid transparent;
  position: absolute;
  bottom: 0;
}

@media screen and (forced-colors: active) {
  .emotion-3 {
    background-color: window;
  }
}

@media (min-width: 25rem) {
  .emotion-3 {
    padding: 1rem;
  }
}

.emotion-3 strong {
  font-weight: normal;
}

.emotion-4 {
  font-size: 0.75rem;
  line-height: 1rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-style: normal;
  font-weight: 700;
  background-color: #222222;
  border: none;
  color: #FFFFFF;
  cursor: pointer;
  display: block;
  height: 5rem;
  width: 5rem;
  padding: 0;
  -webkit-transition: background-color 300ms;
  transition: background-color 300ms;
  position: absolute;
  bottom: 0;
  left: 0;
  z-index: 1;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-4 {
    font-size: 0.75rem;
    line-height: 1rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-4 {
    font-size: 0.75rem;
    line-height: 1rem;
  }
}

.emotion-4:hover,
.emotion-4:focus {
  background-color: #B80000;
  -webkit-transition: background-color 300ms;
  transition: background-color 300ms;
}

@media screen and (forced-colors: active) {
  .emotion-4 {
    background-color: canvas;
    border: 0.0625rem solid canvasText;
    -webkit-transition: none;
    transition: none;
  }

  .emotion-4:hover,
  .emotion-4:focus {
    background-color: canvas;
    -webkit-transition: none;
    transition: none;
  }

  .emotion-4:focus {
    border: none;
  }
}

.no-js .emotion-4 {
  display: none;
}

.emotion-4:focus-visible::before {
  content: '';
  position: absolute;
  left: 0;
  right: 0;
  top: 0;
  bottom: 0;
  box-shadow: 0 0 0 0.1875rem #FFFFFF inset;
  border: 0.1875rem solid #000000;
}

.emotion-5 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
  white-space: nowrap;
}

.emotion-6 {
  margin-top: 0.5rem;
}

.emotion-6>svg {
  color: #FFFFFF;
  fill: currentColor;
  height: 1.5rem;
  width: 1.5rem;
}

@media screen and (forced-colors: active) {
  .emotion-6>svg {
    color: canvasText;
  }
}

.emotion-7 {
  vertical-align: middle;
  margin: 0 0.25rem;
  color: #222222;
  fill: currentColor;
  width: 0.75rem;
  height: 0.75rem;
}

.emotion-9 {
  display: block;
  margin-top: 0.5rem;
  color: #FFFFFF;
}

@media screen and (forced-colors: active) {
  .emotion-9 {
    color: canvasText;
  }
}

.emotion-10 {
  position: relative;
  height: 100%;
  background-image: url(data:image/svg+xml,%3C%3Fxml%20version%3D%221.0%22%20encoding%3D%22UTF-8%22%3F%3E%3Csvg%20width%3D%22479%22%20height%3D%22136%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%3Cg%20fill%3D%22none%22%20fill-rule%3D%22evenodd%22%3E%3Cg%20fill%3D%22%23D5D0CD%22%3E%3Cg%3E%3Cpath%20d%3D%22M449.556%2091.553l-2.31%201.41c-11.167%206.818-23.313%2010.474-34.346%2010.47-23.61-.09-39.163-14.083-39.227-34.453.03-19.918%2016.27-34.663%2038.633-34.718%2011.387.01%2021.703%202.954%2033.962%209.672l2.251%201.24v-18.19l-.962-.377c-13.824-5.458-24.53-7.89-35.103-7.884-16.346-.006-30.533%205.394-40.637%2014.557-10.105%209.163-16.106%2022.102-16.099%2036.953.008%2010.348%204.279%2022.48%2013.42%2032.105%209.121%209.628%2023.165%2016.648%2042.43%2016.639h.063c15.98%200%2027.062-3.563%2037.074-8.492l.851-.414V91.553zM334%20135.697h144.195V0H334v135.697z%22%2F%3E%3Cpath%20d%3D%22M276.937%2089.968c.041-12.33-8.171-21.696-21.308-25.3%203.544-1.809%206.35-4.023%208.404-6.727%202.75-3.622%204.061-8.064%204.046-13.235.015-6.359-2.486-12.839-7.858-17.687-5.372-4.847-13.526-7.997-24.654-7.991H204.83v97.728h36.073c12.87%200%2021.906-3.482%2027.722-8.65%205.818-5.155%208.32-11.91%208.312-18.138zM167%20135.698h144.197V0H167v135.697z%22%2F%3E%3Cpath%20d%3D%22M109.937%2089.968c.041-12.33-8.171-21.696-21.308-25.3%203.544-1.809%206.35-4.023%208.404-6.727%202.75-3.622%204.061-8.064%204.046-13.235.015-6.359-2.486-12.839-7.858-17.687-5.372-4.847-13.526-7.997-24.654-7.991H37.83v97.728h36.073c12.87%200%2021.906-3.482%2027.722-8.65%205.818-5.155%208.32-11.91%208.312-18.138zM0%20135.698h144.197V0H0v135.697z%22%2F%3E%3Cpath%20d%3D%22M258.662%2088.198c-.013%203.229-1.007%206.475-3.896%209.011-2.884%202.537-7.873%204.463-16.133%204.463H222V75h15.893c7.411%200%2012.67%201.502%2015.965%203.85%203.289%202.362%204.776%205.463%204.804%209.348%22%2F%3E%3Cpath%20d%3D%22M91.662%2088.198c-.013%203.229-1.007%206.475-3.896%209.011-2.884%202.537-7.874%204.463-16.133%204.463H55V75h15.892c7.412%200%2012.672%201.502%2015.966%203.85%203.289%202.362%204.776%205.463%204.804%209.348%22%2F%3E%3Cpath%20d%3D%22M245.186%2055.79c3.096-2.237%204.59-5.386%204.613-10.124-.015-3.25-.943-6.033-3.281-8.111-2.346-2.078-6.33-3.555-12.754-3.555H222v25.275h8.076c6.988.004%2011.998-1.243%2015.11-3.486%22%2F%3E%3Cpath%20d%3D%22M78.186%2055.79c3.096-2.237%204.59-5.386%204.613-10.124-.015-3.25-.943-6.033-3.282-8.111C77.172%2035.477%2073.188%2034%2066.764%2034H55v25.275h8.076c6.988.004%2011.998-1.243%2015.11-3.486%22%2F%3E%3C%2Fg%3E%3C%2Fg%3E%3C%2Fg%3E%3C%2Fsvg%3E%0A);
  -webkit-background-position: center center;
  background-position: center center;
  background-repeat: no-repeat;
  -webkit-background-size: 60px 17px;
  background-size: 60px 17px;
  background-color: #F2F2F2;
}

@media (min-width: 25rem) {
  .emotion-10 {
    -webkit-background-size: 77px 22px;
    background-size: 77px 22px;
  }
}

@media (min-width: 63rem) {
  .emotion-10 {
    -webkit-background-size: 93px 27px;
    background-size: 93px 27px;
  }
}

.emotion-11 {
  width: 100%;
  object-fit: cover;
  height: 100%;
}

<div>
  <div
    class="emotion-0"
    data-e2e="media-loader__placeholder"
  >
    <div
      class="emotion-1"
      data-e2e="media-player__guidance"
    >
      <strong
        aria-hidden="true"
        class="guidance-message emotion-2"
      >
        Guidance: May contain strong language, sexual or violent content that may offend.
      </strong>
      <noscript
        class="emotion-3"
      />
    </div>
    <button
      class="focusIndicatorRemove emotion-4"
      type="button"
    >
      <span
        class="emotion-5"
      >
        Guidance: May contain strong language, sexual or violent content that may offend. Play video, "Dog chases cat.", 2 minutes 30 seconds
      </span>
      <div
        aria-hidden="true"
        class="emotion-6"
      >
        <svg
          aria-hidden="true"
          class="emotion-7 emotion-8"
          focusable="false"
          height="12"
          viewBox="0 0 12 12"
          width="12"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            fill="none"
            fill-rule="evenodd"
          >
            <path
              d="M.5.6h12v12H.5z"
            />
            <path
              d="M2.144.96v11.28l8.712-5.64z"
              fill="currentColor"
            />
          </g>
        </svg>
      </div>
      <time
        aria-hidden="true"
        class="emotion-9"
        datetime="PT2M30S"
      >
        2:30
      </time>
    </button>
    <div
      class="emotion-10"
      style="padding-bottom: 0px; overflow: hidden;"
    >
      <img
        alt=""
        class="emotion-11"
        loading="eager"
        src="http://foo.bar/placeholder.png"
        style="aspect-ratio: auto;"
      />
    </div>
  </div>
</div>
`;
